--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
   }
 }
