--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "moduleResolution": "node",
     "outDir": "dist"
   },
-  "include": ["tests/*.test.ts"],
+  "include": ["tests/**/*.test.ts"],
   "lib": ["es2015"]
 }
