--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "what-is-my-ip-address": "^1.0.3"
   }
 }
